syntax = "proto3";
package glnro.random_oracle.v1;

option go_package = "github.com/glnro/random-oracle/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "amino/amino.proto";


message RandomResult {
  uint64 round = 1;
  string randomness = 2;
  string signature = 3;
}

message SideTransactionA {
  option (cosmos_proto.implements_interface) = "glnro.random_oracle.v1.SideTransaction";
  option (amino.name)                        = "cosmos-sdk/SideTransactionA";
  string name = 1;
}

message SideTransactionB {
  option (cosmos_proto.implements_interface) = "glnro.random_oracle.v1.SideTransaction";
  option (amino.name)                        = "cosmos-sdk/SideTransactionB";
  string title = 1;
}